{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 57,
  "lineage": "a42a66f0-95b4-1e07-74f7-80027aadb9d3",
  "resources": [
    {
      "module": "module.glb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 0,
                "group": "https://www.googleapis.com/compute/v1/projects/tf-first-project/regions/asia-southeast1/instanceGroups/mig2-dr",
                "max_utilization": 0.8
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/tf-first-project/regions/asia-south1/instanceGroups/mig3-primary",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-03-14T06:50:49.635-07:00",
            "enable_cdn": false,
            "fingerprint": "_QSniW6oxQc=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/healthChecks/autohealing-health-check"
            ],
            "id": "gitlab-server-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "gitlab-server-backend-service",
            "port_name": "http",
            "project": "tf-first-project",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/backendServices/gitlab-server-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.health_check.google_compute_health_check.autohealing",
            "module.instance_template_primary.google_compute_instance_template.appserver-template",
            "module.mig_dr.google_compute_region_instance_group_manager.mig",
            "module.mig_primary.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-03-14T06:27:04.452-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "gitlab-firewall",
            "name": "gitlab-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1",
            "priority": 1000,
            "project": "tf-first-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/firewalls/gitlab-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.db-primary-n-dr",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private-ip-alloc",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.73.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-03-14T06:27:04.956-07:00",
            "id": "private-ip-alloc",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-alloc",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1",
            "prefix_length": 16,
            "project": "tf-first-project",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/addresses/private-ip-alloc"
          },
          "dependencies": [
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.glb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "global-rule",
            "ip_address": "34.107.142.27",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-rule",
            "port_range": "443-443",
            "project": "tf-first-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/forwardingRules/global-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/targetHttpsProxies/gitlab-server-https-proxy"
          },
          "dependencies": [
            "module.db-primary-n-dr.google_service_networking_connection.private_vpc_connection",
            "module.db-primary-n-dr.google_sql_database_instance.dr",
            "module.db-primary-n-dr.google_sql_database_instance.primary",
            "module.db-primary-n-dr.random_id.db_name_suffix_dr",
            "module.glb.google_compute_backend_service.default",
            "module.glb.google_compute_ssl_certificate.default",
            "module.glb.google_compute_target_https_proxy.default",
            "module.glb.google_compute_url_map.default",
            "module.health_check.google_compute_health_check.autohealing",
            "module.instance_template_dr.google_compute_instance_template.appserver-template",
            "module.instance_template_primary.google_compute_instance_template.appserver-template",
            "module.mig_dr.google_compute_region_instance_group_manager.mig",
            "module.mig_primary.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "gitlab-vpc1",
            "name": "gitlab-vpc1",
            "project": "tf-first-project",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/gateways/default-internet-gateway",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "tf-first-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "asia-south1/subnet-primary",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-03-14T06:27:04.696-07:00",
            "description": "This subnet has a description",
            "enable_flow_logs": false,
            "fingerprint": "fTj6Nuf5oFg=",
            "gateway_address": "10.10.10.1",
            "id": "asia-south1/subnet-primary",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-primary",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1",
            "private_ip_google_access": true,
            "project": "tf-first-project",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/regions/asia-south1/subnetworks/subnet-primary"
          },
          "dependencies": [
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "asia-southeast1/subnet-dr",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-03-14T06:27:04.681-07:00",
            "description": "This subnet has a description",
            "enable_flow_logs": false,
            "fingerprint": "RiCNEoD5pg0=",
            "gateway_address": "10.10.20.1",
            "id": "asia-southeast1/subnet-dr",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "subnet-dr",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/networks/gitlab-vpc1",
            "private_ip_google_access": true,
            "project": "tf-first-project",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/regions/asia-southeast1/subnetworks/subnet-dr"
          },
          "dependencies": [
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.glb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-03-14T06:51:03.550-07:00",
            "id": "gitlab-server-https-proxy",
            "name": "gitlab-server-https-proxy",
            "project": "tf-first-project",
            "proxy_id": 4100334730518552488,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/targetHttpsProxies/gitlab-server-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/sslCertificates/my-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/urlMaps/gitlab-server-url-map"
          },
          "dependencies": [
            "module.db-primary-n-dr.google_service_networking_connection.private_vpc_connection",
            "module.db-primary-n-dr.google_sql_database_instance.dr",
            "module.db-primary-n-dr.google_sql_database_instance.primary",
            "module.db-primary-n-dr.random_id.db_name_suffix_dr",
            "module.glb.google_compute_backend_service.default",
            "module.glb.google_compute_ssl_certificate.default",
            "module.glb.google_compute_url_map.default",
            "module.health_check.google_compute_health_check.autohealing",
            "module.instance_template_dr.google_compute_instance_template.appserver-template",
            "module.instance_template_primary.google_compute_instance_template.appserver-template",
            "module.mig_dr.google_compute_region_instance_group_manager.mig",
            "module.mig_primary.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.glb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-03-14T06:50:58.761-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/backendServices/gitlab-server-backend-service",
            "description": "",
            "fingerprint": "Nmo2OAnwSbI=",
            "host_rule": [],
            "id": "gitlab-server-url-map",
            "map_id": 701966510670831533,
            "name": "gitlab-server-url-map",
            "path_matcher": [],
            "project": "tf-first-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-first-project/global/urlMaps/gitlab-server-url-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "module.db-primary-n-dr.google_service_networking_connection.private_vpc_connection",
            "module.db-primary-n-dr.google_sql_database_instance.dr",
            "module.db-primary-n-dr.google_sql_database_instance.primary",
            "module.db-primary-n-dr.random_id.db_name_suffix_dr",
            "module.glb.google_compute_backend_service.default",
            "module.health_check.google_compute_health_check.autohealing",
            "module.instance_template_dr.google_compute_instance_template.appserver-template",
            "module.instance_template_primary.google_compute_instance_template.appserver-template",
            "module.mig_dr.google_compute_region_instance_group_manager.mig",
            "module.mig_primary.google_compute_region_instance_group_manager.mig",
            "module.vpc.module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}